--- a/style.css
+++ b/style.css
@@ -5,12 +5,28 @@
 }
 
 body {
+    padding-top: 2rem;
     display: grid;
     justify-items: center;
+    gap: 2rem;
+}
+
+body form div {
+    display: flex;
+    align-items: center;
+}
+
+body form div button {
+    flex: 1;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 main {
-    margin-top: 5rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
